syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

message CreateGameRequest {
  string player_id = 1;
  string game_name = 2;
  int32 player_count = 3;
}

message CreateGameResponse {
  string game_code = 1;
  string game_id = 2;
  int32 index = 3;
}

message JoinGameRequest {
  string player_id = 1;
  string game_name = 2;
  string game_code = 3;
}

message JoinGameResponse {
  string game_id = 1;
  int32 index = 2;
}

message RejoinGameRequest {
  string player_id = 1;
  string game_id = 2;
}

message LeaveGameRequest {
  string player_id = 1;
  string game_id = 2;
}

message RejoinGameResponse {
  string game_id = 1;
  int32 index = 2;
}

message ListenGame {
  string player_id = 1;
  string game_id = 2;
}

message GameEvent {
  enum Type {
    PLAYER_COUNT_CHANGED = 0;
    LEVEL_STARTED = 1;
  }
  Type type = 1;
  int32 count = 2;
  string level_id = 3;
  map<string, string> options = 4;
}

message StartLevelRequest {
  string game_id = 1;
  map<string, string> options = 2;
}

message EndLevelRequest {
  string level_id = 1;
}

service GameService {
  // unary services
  rpc Create(CreateGameRequest) returns (CreateGameResponse) {};
  rpc Join(JoinGameRequest) returns (JoinGameResponse) {};
  rpc Rejoin(RejoinGameRequest) returns (RejoinGameResponse) {};
  rpc Leave(LeaveGameRequest) returns (google.protobuf.Empty) {};
  rpc StartLevel(StartLevelRequest) returns (google.protobuf.Empty) {};

  // streaming service
  rpc Listen(ListenGame) returns (stream GameEvent) {};
}

message LevelEvent {
  enum Type {
    DATA_NONE = 0;
    DATA_INT = 1;
    DATA_STRING = 2;
  }
  string level_id = 1;
  string player_id = 2;
  Type type = 3;
  string key = 4;
  int32 value_int = 5;
  string value_string = 6;
}

service LevelService {
  // unary services
  rpc End(EndLevelRequest) returns (google.protobuf.Empty) {};

  // streaming service
  rpc Play(stream LevelEvent) returns (stream LevelEvent) {};
}